k8s/teams-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teams-api
  namespace: platform-system
spec:
  selector:
    app: teams-api
  ports:
    - port: 80
      targetPort: 8080
